# cylinder-flow

./: .gitignore  README.md  pyproject.toml  requirements-mac.txt  requirements.txt  train.py
datasets/: __init__.py  cylinder_flow.py
metrics/: __init__.py  basic.py
models/: __init__.py  flare.py  fno.py  gnn.py  gnot.py  lno.py  simple_mlp.py  transolver.py
scripts/: analyze_training_dynamics.py  run.sh
utils/: __init__.py  files.py  tracking.py
