[project]
name = "cylinder-flow"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch==2.11.0+cu130",
    "torchvision==0.26.0+cu130",
    "torchaudio==2.11.0+cu130",
    "transformers>=4.51,<5.0",
    "datasets>=3.5,<4.0",
    "huggingface-hub>=0.31,<1.0",
    "accelerate>=1.6,<2.0",
    "tokenizers>=0.21,<0.22",
    "safetensors>=0.5,<1.0",
    "numpy>=2.0,<3.0",
    "scipy>=1.14,<2.0",
    "pandas>=2.2,<3.0",
    "matplotlib>=3.10,<4.0",
    "h5py>=3.13,<4.0",
    "scikit-learn>=1.6,<2.0",
    "tqdm>=4.67,<5.0",
    "PyYAML>=6.0,<7.0",
    "einops>=0.8,<1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
